# trivial_cpp_project

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_lib/: CMakeLists.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_lib/src/: {{cookiecutter.project_slug}}.cpp
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_lib/test/: {{cookiecutter.project_slug}}_test.cpp
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}_main/: CMakeLists.txt
